--- a/React.js/component&jsx/index.html
+++ b/React.js/component&jsx/index.html
@@ -104,7 +104,7 @@ export default Component</code></pre></div>
 <li>class를 선언할때 class가 아닌 className 사용</li>
 <li>Inline Styling할때 &#x3C;div style={{color : “red”}}>Hello React</div></li>
 <li>Slef Closing tag 필수!! <code class="language-text">&lt;br /&gt;</code> ,<code class="language-text">&lt;input /&gt;</code>, <code class="language-text">&lt;button /&gt;</code> 등등</li>
-<li>JSX는 내부요소들을 감싸는 최상위 요소가 있어야하는데 Fragments는 DOM에 별도의 노드를 추가하지않고 하나의 Component안에 여러 요소들을 그룹화 할 수 있어서 불필요한 div tag의 생성을 막을수 있어 유용하다</li>
+<li><code class="language-text">JSX</code>는 내부요소들을 감싸는 최상위 요소가 있어야하는데 <code class="language-text">Fragments</code>는 <code class="language-text">DOM</code>에 별도의 노드를 추가하지않고 하나의 <code class="language-text">Component</code>안에 여러 요소들을 그룹화 할 수 있어서 불필요한 <code class="language-text">div tag</code>의 생성을 막을수 있어 유용하다</li>
 </ul>
 </li>
 </ul>
