--- a/Diary/1stWesop/index.html
+++ b/Diary/1stWesop/index.html
@@ -196,7 +196,7 @@
 <br></p>
 <h3 id="느낀점" style="position:relative;"><a href="#%EB%8A%90%EB%82%80%EC%A0%90" aria-label="느낀점 permalink" class="anchor before"><svg aria-hidden="true" focusable="false" height="16" version="1.1" viewBox="0 0 16 16" width="16"><path fill-rule="evenodd" d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"></path></svg></a>느낀점</h3>
 <p>실력은 부족하지만 어찌어찌 PM을 맡다보니 맡은일에 대한 책임감도 생기고..
-평소에 먼저 나서는 성격도 아니고 본성은 내성적인 편이라 책임감이 막중한 역할은 부담스러움을 느껴서 조금 피하는 편이지만, 돌이켜보면 누군가 반드시 해야만하는 일이있는데 아무도 하지않는다면 내키진 않아도 맡아서 했었던거같다. 그렇게 막중한 역할을 맡다보면 끈기와 노력이 부족한 내 자신에게 없던 책임감도 생기고 열심히해야한다는 동기부여도 되고 많은 이점이 있었고 대학시절 과대표도 그렇게 얼떨결에 했었고 미숙했지만 많은걸 배웠고 정말 값지고 좋은 경험이였다.</p>
+평소에 먼저 나서는 성격도 아니고 기본적으로 좀 내성적인 편이라 책임감이 막중한 역할은 부담스러움을 느껴서 조금 피하는 편이지만, 돌이켜보면 누군가 반드시 해야만하는 일이있는데 아무도 하지않는다면 내키진 않아도 맡아서 했었던거같다. 그렇게 막중한 역할을 맡다보면 끈기와 노력이 부족한 내 자신에게 없던 책임감도 생기고 열심히해야한다는 동기부여도 되고 많은 이점이 있었고 대학시절 과대표도 그렇게 얼떨결에 했었고 미숙했지만 많은걸 배웠고 정말 값지고 좋은 경험이였다.</p>
 <p>이번 PM역할도 덥썩 맡게되었지만 많은 시행착오와 미숙함을 느끼며 어떠한 점이 부족했는지에 대해 많이 생각하게되었다. </p>
 <img src="https://thumbs.gfycat.com/BrightNiceAustraliankestrel.webp">
 <p>개인적으로 정말 좋아하는 마블 영화의 캐릭터인 가오갤의 피터퀼.</p>
