--- a/Diary/1stWesop/index.html
+++ b/Diary/1stWesop/index.html
@@ -209,7 +209,7 @@
 <li>모두가 피곤하고 지칠만했음에도 항상 분위기를 띄워주고 사기를 북돋아주어 모두가 기분좋게 지속적으로 프로젝트를 진행할수 있게 만들어주셨고 완벽한 로그인, 회원가입 기능을 만들어주시고 자신의 코드를 정말 사랑하는 나르시즘 <code class="language-text">원근</code>님 🤪</li>
 <li>20기 프론트의 에이스, 항상 질문하러오는사람이 끊이질않고 맡은업무량도 제일 많은데도 싫은티 한번 내지않으시며 친절하게 설명해주시고 끝없이 알려주시고 프로젝트가 끝난뒤에도 팀원들의 코드 이해를 돕기위해 주석까지 계속 작성해주시는 스승 도실버 <code class="language-text">도은</code>님 🤗</li>
 <li>처음부터 끝까지 항상 친절하시고 팀원들을 매번 챙겨주시며 웃음을 잃지않으시며 맡은일은 밤낮으로 끝까지 노력하며 완수해내주시고 20기의 친절왕 무한친절 리액션 <code class="language-text">미화</code>님 😇</li>
-<li>진지하고 또 진지하고 또 진지하지만 그것이 매력이고 프로젝트 기간이 지날수록 장난도 치시고 진지함에서 나오는 장난이 굉장히 웃긴ㅋㅋㅋㅋ 항상 부족하다고 자책하시지만 아무리봐도 노력으로 모든걸 커버치시며 프로젝트를 성공하신 진지뽀짝 <code class="language-text">성호</code>님 😎</li>
+<li>진지하고 또 진지하고 또 진지하지만 그것이 매력이고 프로젝트 기간이 지날수록 장난도 치시고 진지함에서 나오는 장난이 굉장히 웃긴ㅋㅋㅋㅋ 항상 부족하다고 자책하시지만 아무리봐도 노력으로 모든걸 커버치시며 프로젝트를 성공하신 노력파 진지뽀짝 <code class="language-text">성호</code>님 😎</li>
 </ul>
 <br>
 <br>
