--- a/Diary/1stWesop/index.html
+++ b/Diary/1stWesop/index.html
@@ -214,8 +214,9 @@
 <br>
 <br>
 <p>2주동안 모두 잠도 부족하고 안풀리는 문제를 머리싸매고 계속 코딩하느라 많이 힘들법한데도 힘든티 내지않고 시간이 훅 지날만큼 흥미롭게 프로젝트를 진행하게해주어서 정말 감사한 마음..
-테라로사와 던킨에서 하루종일 코딩하던 기억은 정말 오래갈 추억이 될것같다.
-수료후에도 다같이 스터디와 프로젝트를하며 쭉 이어가고싶을정도로 정말 좋은 팀이였다😗</p>
+정말 어떻게 지나갔는지 모르는 2주였지만 정말 재밌었고 마음에와닿는 팀이다 😋
+추억으로만 남지않고 앞으로도 계속 이어 갈수 있는,
+수료후에도 다같이 스터디와 프로젝트를하며 쭉 이어가고 싶을정도로 정말 다정하고 좋은팀이였다😗</p>
 <p>남는건 동기다 !!!!!!😭😭😭😭😭😭😭😭</p>
 <img src="https://user-images.githubusercontent.com/58321429/119234772-83608380-bb6a-11eb-8089-9c0006af7f40.png" width="200" height="200">
 <blockquote>
