--- a/Diary/1stWesop/index.html
+++ b/Diary/1stWesop/index.html
@@ -97,7 +97,8 @@
 <br>
 <h3 id="필터바" style="position:relative;"><a href="#%ED%95%84%ED%84%B0%EB%B0%94" aria-label="필터바 permalink" class="anchor before"><svg aria-hidden="true" focusable="false" height="16" version="1.1" viewBox="0 0 16 16" width="16"><path fill-rule="evenodd" d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"></path></svg></a>필터바</h3>
 <img src="https://user-images.githubusercontent.com/58321429/119220274-b2ec9d00-bb24-11eb-9755-87b5c73759b0.gif">
-정말 어려웠던 컴포넌트.. 아직도 많이 헷갈린다.. 처음에 렌더링 후 스크롤바를 내리다가 상단바에 걸리면 필터바의 디자인이 바뀌며 고정된다. 애니메이션 부분은 팀원이자 스승님이신 도은님의 도움으로 성공적으로 구현했지만 필터링 기능부분은 아직 시간이 부족해 미완성이라 많이 아쉽다.. (애니메이션은 따로 블로깅 예정)
+정말 어려웠던 컴포넌트.. 아직도 많이 헷갈린다.. 처음에 렌더링 후 스크롤바를 내리다가 상단바에 걸리면 필터바의 디자인이 바뀌며 고정된다. 
+애니메이션 부분은 팀원이자 스승님이신 도은님의 도움으로 성공적으로 구현했지만 필터링 기능부분은 아직 시간이 부족해 미완성이라 많이 아쉽다.. (애니메이션은 따로 블로깅 예정)
 나중에 시간이 난다면 반드시 완성 시키고 말겠다
 <br>
 <br>
@@ -195,9 +196,22 @@
 <br>
 <br></p>
 <h3 id="느낀점" style="position:relative;"><a href="#%EB%8A%90%EB%82%80%EC%A0%90" aria-label="느낀점 permalink" class="anchor before"><svg aria-hidden="true" focusable="false" height="16" version="1.1" viewBox="0 0 16 16" width="16"><path fill-rule="evenodd" d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"></path></svg></a>느낀점</h3>
+<img src="https://media.giphy.com/media/148k3l7yAK0LN6/giphy.gif">
+<img src="https://media.giphy.com/media/dEdgB3euossMg/giphy.gif" width="250" height="156">
+<p>너무 밤늦게까지 하지 말자!! 구현속도가 느린거같아서 새벽까지 무리 좀 했었는데..
+확실히..다음날 타격이 있더라.. 눈은 떠있어도 뇌가 멈춰버린 느낌😌
+이래서 멘토님들께서 무리하지 말라고 하셨나보다.
+하지만 아무리 말해주셔도 귓등으로 듣다가 겪어봐야 아는 나란놈..
+집에오면 책상앞에서 코딩하다가 새벽밤늦게 맨날 졸았다…
+코딩하는것도 아니고 잠을 푹자는것도 아니고 이도저도 아니게 되어버리더라 🥺
+다음부턴 페이스 조절 제대로 해야겠다 !!!!!!</p>
+<img src="https://media.giphy.com/media/cephYUQtGUORy/giphy.gif" width="300">
+<p>너무 혼자서만 끙끙 앓지말고 도움을 요청하자!!
+개발은 혼자서 해내야 진정 내것이되고 남들이 알려주면 내것이 되지않는다는 생각이 없지않아 있는데
+이런생각을 내려놓는것도 좋을것같다. 주변의 도움을 적정선에서 수용하는것이 더 좋은방향이고 보다 더 넓은 시야를 트이게 하는거같다!! 개발은 협업, 팀단위로 하는것인데 굉장히 당연한것을 놓치고있었다니..</p>
 <p>실력은 부족하지만 어찌어찌 PM을 맡다보니 맡은일에 대한 책임감도 생기고..
-평소에 먼저 나서는 성격도 아니고 기본적으로 좀 내성적인 편이라 책임감이 막중한 역할은 부담스러움을 느껴서 조금 피하는 편이지만, 돌이켜보면 누군가 반드시 해야만하는 일이있는데 아무도 하지않는다면 내키진 않아도 맡아서 했었던거같다. 그렇게 막중한 역할을 맡다보면 끈기와 노력이 부족한 내 자신에게 없던 책임감도 생기고 열심히해야한다는 동기부여도 되고 많은 이점이 있었고 대학시절 과대표도 그렇게 얼떨결에 했었고 미숙했지만 많은걸 배웠고 정말 값지고 좋은 경험이였다.</p>
-<p>이번 PM역할도 덥썩 맡게되었지만 많은 시행착오와 미숙함을 느끼며 어떠한 점이 부족했는지에 대해 많이 생각하게되었다. </p>
+평소에 먼저 나서는 성격도 아니고 기본적으로 좀 내성적인 편이라 책임감이 막중한 역할은 부담스러움을 느껴서 조금 피하는 편이지만, 돌이켜보면 누군가 반드시 해야만하는 일이있는데 아무도 하지않는다면 내키진 않아도 맡아서 했었던거같다. 그렇게 막중한 역할을 맡다보면 끈기와 노력이 부족한 내 자신에게 없던 책임감도 생기고 열심히해야한다는 동기부여도 되고 많은 이점이 있었고 대학시절 과대표도 그렇게 얼떨결에 했었고 미숙했지만 많은걸 배웠고 정말 값지고 좋은 경험이였다.
+이번 PM역할도 덥썩 맡게되었지만 많은 시행착오와 미숙함을 느끼며 어떠한 점이 부족했는지에 대해 많이 생각하게되었다. </p>
 <img src="https://thumbs.gfycat.com/BrightNiceAustraliankestrel.webp">
 <p>개인적으로 정말 좋아하는 마블 영화의 캐릭터인 가오갤의 피터퀼.</p>
 <p>많이 엉성하고 부족하지만 팀을 끝까지 이끌며 유머와 센스가 넘친다.
@@ -213,6 +227,7 @@
 </ul>
 <br>
 <br>
+<img src="https://media.giphy.com/media/PwQqd5Q9qxpYs/giphy.gif" width="400">
 <p>2주동안 모두 잠도 부족하고 안풀리는 문제를 머리싸매고 계속 코딩하느라 많이 힘들법한데도 힘든티 내지않고 시간이 훅 지날만큼 흥미롭게 프로젝트를 진행하게해주어서 정말 감사한 마음..
 정말 어떻게 지나갔는지 모르는 2주였지만 정말 재밌었고 마음에와닿는 팀이다 😋
 추억으로만 남지않고 앞으로도 계속 이어 갈수 있는,
