--- a/Diary/1stWesop/index.html
+++ b/Diary/1stWesop/index.html
@@ -88,7 +88,7 @@
 <img src="https://user-images.githubusercontent.com/58321429/119232825-860aab00-bb61-11eb-97a8-d502ab768b9d.gif">
 상품리스트에서 한가지 상품을 클릭하면 해당 상품의 상세정보를 볼 수 있는 페이지로 넘어간다.
 상품에대해 더욱 상세한 정보를 볼 수 있고 마찬가지로 사이즈 선택을 할 수 있고
-선택시 가격과 사진이 변경된다. 사진에 보이는 사진은 단순히 확대한것이 아닌 정확히 2배 용량이다😏 이의제기, 반박 받지않습니다 🤪
+선택시 가격과 사진이 변경된다. 사진에 보이는 사진은 단순히 확대한것이 아닌 정확히 2배 용량이다😏
 <br>
 <br>
 <h3 id="장바구니-추가" style="position:relative;"><a href="#%EC%9E%A5%EB%B0%94%EA%B5%AC%EB%8B%88-%EC%B6%94%EA%B0%80" aria-label="장바구니 추가 permalink" class="anchor before"><svg aria-hidden="true" focusable="false" height="16" version="1.1" viewBox="0 0 16 16" width="16"><path fill-rule="evenodd" d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"></path></svg></a>장바구니 추가</h3>
