--- a/React.js/Calender/index.html
+++ b/React.js/Calender/index.html
@@ -87,8 +87,8 @@
 <img src="https://raw.githubusercontent.com/airbnb/react-dates/master/react-dates-demo.gif">
 처음엔 그냥 api문서 보고 필요한거 가져다가 붙이면 되겠거니 생각했다</p>
 <br>
-<p><img src="https://user-images.githubusercontent.com/58321429/120111740-1b372080-c1ae-11eb-82df-57af01852889.gif" alt="api">
-아</p>
+<p><img src="https://user-images.githubusercontent.com/58321429/120111740-1b372080-c1ae-11eb-82df-57af01852889.gif" alt="api"></p>
+<p>아</p>
 <br>
 <br>
 <br>
@@ -107,8 +107,8 @@
 이거로 다 바꿀수있는줄 알았는데 아무리 변경해봐도 안되는것이였다..<br>
 그래서 라이브러리가 설치된 <code class="language-text">node_modules</code> 폴더에 들어가서 달력에 적용된 <code class="language-text">css</code> 파일을 열어보았다.<br>
 거기서 <code class="language-text">css</code>속성을 변경해주면 쉽게 변경할수있겠지?</p>
-<p><img src="https://user-images.githubusercontent.com/58321429/120112206-dad8a200-c1af-11eb-8e95-e23d50bcff0b.gif" alt="달력">
-아</p>
+<p><img src="https://user-images.githubusercontent.com/58321429/120112206-dad8a200-c1af-11eb-8e95-e23d50bcff0b.gif" alt="달력"></p>
+<p>아</p>
 <br>
 <br>
 <br>
