--- a/React.js/Calender/index.html
+++ b/React.js/Calender/index.html
@@ -123,7 +123,7 @@
 <br>
 <p><img src="https://user-images.githubusercontent.com/58321429/120112420-bc26db00-c1b0-11eb-9909-8a8c20499a3e.gif" alt="비어비앤비달력"></p>
 <blockquote>
-<p>임시구현.. 갈길이 멀다  라이브러리 써도 2주걸리겠는데..?</p>
+<p>임시구현.. 갈길이 멀다 </p>
 </blockquote>
 <p>달력 라이브러리의 종류<br>
 react-dates를 선택한 이유<br>
