--- a/Diary/3monthReview/index.html
+++ b/Diary/3monthReview/index.html
@@ -82,7 +82,7 @@
 <img src="https://images.velog.io/images/suyeonme/post/6d16694b-08d9-4777-8bd3-2448c65cd45d/epv55hgtsfi8csprpj9u.jpeg">
 <p>그래서 프론트엔드 개발자로 취업을 하려면 뭐부터 공부를 해야할지 찾아보다가 React가 가장 커뮤니티가 활성화되어있고 추후에 React Native로 안드/ios앱을 단순히 웹뷰로 감싸는것이 아닌 네이티브로 만들수있다하며 이거다! 하고 React로 정하였고 프론트엔드 개발자라하여 백엔드를 등한시해서는 절대 롱런하지 못할거라 판단하여 Node.js의 express 프레임워크를 사용하여 서버단도 해보고 싶었다. </p>
 <p>그런데 Javascript도 안해본 내가 처음부터 아무런 가이드 방향없이 웹 하나 뚝딱 만들어보려고하니 조금 막막하기도하고 프로젝트 완성의 시간을 좀 단축시키기위해 학원을 알아보았었다. </p>
-<p>하지만 대부분의 학원들은 내가 배우고싶어하는 React를 가르치는곳은 없었고 가르친다해도 정말 튜토리얼정도만 하는곳이 대부분이였다.. 대부분 과거의 지식을 속성으로 배운 후 학원과 연결되어있는 경력 뻥튀기 업체에 넘기는듯한 구조가 보여서 괜찮은 곳을 찾기가 힘들었다.. </p>
+<p>하지만 대부분의 학원들은 내가 배우고싶어하는 React를 가르치는곳은 없었고 가르친다해도 정말 튜토리얼정도만 하는곳이 대부분이였다.. 어떤곳은 과거의 지식을 속성으로 배운 후 학원과 연결되어있는 경력 뻥튀기 업체에 넘기는듯한 구조가 보여서 괜찮은 곳을 찾기가 힘들었다.. 물론 좋은곳도 있긴했지만 썩 내키진 않았다.</p>
 <p>물론 무엇을 개발을 함에 있어서 언어는 수단에 불과하긴 하지만 나는 스타트업계에 발을 담그고 싶었고 아무래도 일반기업에 비해 상대적으로 인원이 적은 스타트업의 특성상 신입교육에 사람을 붙이거나 시간을 많이 할애 할 여유가 없을거라고 생각이 들었다. </p>
 <p>그렇다면 기술습득이 빠르거나 자사의 기술스택과 일치하여 바로 실무에 투입이 가능하거나 둘중 하나를 뽑을것이라고 생각이들었다..</p>
 <p>면접으로 회사와 맞는지는 당연히 깔고들어가는것이고..😗 그리하여 가능하면 React를 가르치는곳으로 계속 찾아보다가 알게된 것이 부트캠프!  </p>
